<resources>
	<string name="app_name">DigiKala</string>
	<string name="title_activity_main2">Main2Activity</string>
	<string name="action_settings">Settings</string>
	<string name="interstitial_ad_sample">Interstitial Ad Sample</string>
	<string name="start_level">Level 1</string>
	<string name="next_level">Next Level</string>
	<string name="action_add_favourite">Add to Favourites</string>
	<string name="action_play_next">Play Next</string>
	<string name="backdrop_title">LOVE MUSIC</string>
	<string name="backdrop_subtitle">This season top 20 albums</string>
	<string name="sharj_fandaki_header">Sharjer fandaki mashin</string>
	<string name="aroosak_khersi_header">Aroosak khersi 24*12</string>
	<string name="aroosak_khersi_sub">عروسک خرسی 24 سانتی</string>
	<string name="sharj_fandaki_sub">شارژر فندکی ماشین</string>
	<string name="zaferan_ghaenat_header">Zaferan ghayenat</string>
	<string name="zaferan_ghaenat_sub">زعفران قائنات با بهترین عطر و رنگ</string>
	<string name="micro_wave_header">Micro wave hardston</string>
	<string name="sandwich_saz_header">Sandwich saz pars khazar</string>
	<string name="micro_wave_sub">ماکرو ویو هاردستون </string>
	<string name="sandwich_saz_sub">ساندویچ ساز پارس خزر</string>
	<string name="menu_home_page">صفحه ی اصلی</string>
	<string name="menu_category_page">دسته بندی محصولات</string>
	<string name="menu_basket_page">سبد خرید</string>
	<string name="menu_special_offer_page">پیشنهاد ویژه</string>
	<string name="menu_most_seller_page">پرفروش ترین ها</string>
	<string name="menu_most_visited_page">پر بازدید ترین ها</string>
	<string name="menu_newest_page">جدید ترین ها</string>
	<string name="menu_setting_page">تنظیمات</string>
	<string name="menu_question_repeated">سوالات متداول</string>
	<string name="menu_about_us">درباره ی ما</string>
	<string name="menu_sign_in_up_page">ورود / عضویت</string>
	<!--String LOGIN-->
	<string name="text_accounts">All Accounts</string>
	<string name="hint_name">Name</string>
	<string name="hint_email">Email</string>
	<string name="hint_password">Password</string>
	<string name="hint_confirm_password">Confirm Password</string>
	<string name="text_login">Login</string>
	<string name="text_register">Register</string>
	<string name="error_message_name">Enter Full Name</string>
	<string name="error_message_email">Enter Valid Email</string>
	<string name="error_message_age">Enter Age</string>
	<string name="error_message_password">Enter Password</string>
	<string name="success_message">Registration Successful</string>
	<string name="text_not_member">No account yet? Create one</string>
	<string name="text_already_member">Already a member? Login</string>
	<string name="error_email_exists">Email Already Exists</string>
	<string name="error_password_match">Password Does Not Matches</string>
	<string name="error_valid_email_password">Wrong Email or Password</string>
	<string name="text_hello">Hello,</string>
	<string name="text_title">Android Tutorials Hub</string>
	<string name="expand">متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_base">BaseActivity</string>

	<string name="note_70_title">دفترچه یادداشت پاپکو</string>
	<string name="note_70_sub_title">100 برگ</string>
	<string name="note_70_original">25،000 تومان</string>
	<string name="note_70_discount">36،000 تومان</string>
	<string name="note_71_title">دفترچه یادداشت کاغذی</string>
	<string name="note_71_sub_title">مدل شکرگزاری</string>
	<string name="note_71_original">17،222 تومان</string>

	<string name="home_90_title">Sorkh kon philips 200 W</string>
	<string name="home_90_sub">مدل 333</string>
	<string name="home_90_original">799،000 تومان</string>
	<string name="home_90_discount">890,000 تومان</string>
	<string name="home_91_title">Ojagh gas Hardston model 3520</string>
	<string name="home_91_sub">مدل 44</string>
	<string name="home_91_original">800,000 تومان</string>
	<string name="home_91_discount">1,00,000 تومان</string>
	<string name="clean_10_title">پودر ماشین لباسشویی هوم کر</string>
	<string name="clean_10_original">19،000 تومان</string>
	<string name="clean_11_title">مایع ظرفشویی 5 لیتری</string>
	<string name="clean_11_original">20،000 تومان</string>
	<string name="hair_60_title">ریش تراش فیلیپس</string>
	<string name="hair_60_original">850،000 تومان</string>
	<string name="hair_61_title">موزر لاکی</string>
	<string name="hair_61_original">250،000 تومان</string>
	<string name="sport_80_title">کفش نایکی  پیاده روی</string>
	<string name="sport_80_original">1،800،000 تومان</string>
	<string name="sport_80_discount">2،456،000 تومان</string>
	<string name="sport_81_title">کفش نیو بالانس فوتسالی</string>
	<string name="sport_81_original">2،200،000 تومان</string>
	<string name="toys_110_title">تفنگ اسباب بازی</string>
	<string name="toys_110_original">67،000 تومان</string>
	<string name="toys_111_title">مکعب روبیک</string>
	<string name="toys_111_original">32،000 تومان</string>
	<string name="tools_30_title">دریل برقی بوش</string>
	<string name="tools_30_original">1،200،000 تومان</string>
	<string name="tools_31_title">پیچ گوشتی 25 سر</string>
	<string name="tools_31_original">185،000 تومان</string>
	<string name="tools_31_discount">300،000 تومان</string>
	<string name="gold_20_title">دستبند طلای 18 عیار</string>
	<string name="gold_20_original">6،000،000 تومان</string>
	<string name="gold_21_title">دستبند طلا و سنگ</string>
	<string name="gold_21_original">3،200،000 تومان</string>
	<string name="mobile_50_title">آیفون X</string>
	<string name="mobile_50_sub">مدل 128 گیگ</string>
	<string name="mobile_50_original">18،400،000 تومان</string>
	<string name="mobile_50_discount">19،000،000 تومان</string>
	<string name="mobile_51_title">آیفون 7  پلاس</string>
	<string name="mobile_51_sub">مدل 32 گیگ</string>
	<string name="mobile_51_original">6،400،000 تومان</string>
	<string name="mobile_51_discount">7،000،000 تومان</string>
	<string name="fruit_40_title">پسته دامغان</string>
	<string name="fruit_40_original">25،000 تومان</string>
	<string name="fruit_41_title">آلو دامغان</string>
	<string name="fruit_41_sub">آلو بخارا</string>
	<string name="fruit_41_original">12،000 تومان</string>
	<string name="vije_981_title">LG OLYMPUS</string>
	<string name="vije_981_sub">مدل 32 گیگ</string>
	<string name="vije_981_original">3،999،000 تومان</string>
	<string name="vije_981_discount">4،500،000 تومان</string>
	<string name="philips">Fried philips 200 W</string>
	<string name="hardston">Cooking Hardston model 3520</string>
	<string name="rise_cook">Rise cook pars khazar 480 W</string>
	<string name="hard_sub">اجاق گاز هاردستون</string>
	<string name="philips_sub">سرخ کن فیلیپس</string>
</resources>
