<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/groupOne">
		<item

			    android:id="@+id/menu_sign_in"
			    android:icon="@drawable/ic_person_sign_up"
			    android:title="@string/menu_sign_in_up_page"/>
		<item
			    android:id="@+id/itemHome"
			    android:icon="@drawable/ic_home"
			    android:title="@string/menu_home_page"/>
		<item
			    android:id="@+id/itemList"
			    android:icon="@drawable/ic_list"
			    android:title="@string/menu_category_page"/>
	</group>
	<group android:id="@+id/groupTwo">
		<item
			    android:id="@+id/menu_basket_item"
			    android:icon="@drawable/ic_basket"
			    android:title="@string/menu_basket_page"/>
	</group>
	<group android:id="@+id/groupThree">
		<item
			    android:id="@+id/menu_item_special_suggest"
			    android:icon="@drawable/ic_star"
			    android:title="@string/menu_special_offer_page"/>
		<item
			    android:id="@+id/menu_item_most_buy"
			    android:icon="@drawable/ic_star"
			    android:title="@string/menu_most_seller_page"/>
		<item
			    android:id="@+id/menu_most_viewed"
			    android:icon="@drawable/ic_star"
			    android:title="@string/menu_most_visited_page"/>
		<item
			    android:id="@+id/menu_newest_item"
			    android:icon="@drawable/ic_star"
			    android:title="@string/menu_newest_page"/>
	</group>
	<group android:id="@+id/groupFour">
		<item
			    android:id="@+id/menu_item_setting"
			    android:icon="@drawable/ic_settings"
			    android:title="@string/menu_setting_page"/>
		<item
			    android:id="@+id/menu_most_question"
			    android:icon="@drawable/ic_wb_soal"
			    android:title="@string/menu_question_repeated"/>
		<item
			    android:id="@+id/itemAbout"
			    android:icon="@drawable/ic_about"
			    android:title="@string/menu_about_us"/>
	</group>
</menu>